--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<button type="button" class="menu-btn--pause">MAIN MENU</button>
 	</div>
 	<div class="menu menu--score">
-		<h1>Game berkahir</h1>
+		<h1>You lose</h1>
 		<h2>Skor mu:</h2>
 		<div class="final-score-lbl"></div>
 		<div class="high-score-lbl"></div>
